<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetUP</string>
    <string name="menu_settings">Settings</string>
    <string name="sched_event">+ New Event</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="event_title_hint">Enter Event Title</string>
    <string name="done_sched_event">Add Event!</string>
    <string name="cancel_sched_event">Cancel</string>
    <string name="title_activity_calendar_view">Calendar</string>
    <string name="view_events">View Events</string>
    <string name="view_calendar">View Calendar</string>
    <string name="title_activity_event_view">Events</string>
    <string name="event_addr_hint">Enter Event Venue</string>
    <string name="event_notes_hint">Additional Details</string>
    <string name="select_date">Select DATE</string>
    <string name="contacts_list">Attendee(s)</string>
    <string name="select_contacts">+ Invite</string>
    <string name="no_events">No events available</string>
    <string name="date_of_event">Date?</string>
    <string name="start_time">Start?</string>
    <string name="start_time_butt">Start TIME</string>
    <string name="title_activity_single_event_view">Event</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_event">Edit Event</string>
    <string name="done_edit_event">Done</string>
    <string name="edit_event">Edit</string>
    <string name="delete_event">Delete</string>
    <string name="home_button">Home</string>
    <string name="menu_edit_text">Edit</string>
    <string name="menu_delete_text">Delete</string>
    <string name="menu_add_text">+ New Event</string>
    <string name="prev_month">&lt;</string>
    <string name="next_month">&gt;</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="twelve_am">12am</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve_pm">12pm</string>

    <color name="white">#FFFFFF</color>
    <color name="black">#ff000000</color>
    <color name="cyan">#ff00ffff</color>
    <color name="red">#ffff0000</color>

    <string name="title_activity_week_view">Weekly View</string>
    <string name="end_time_butt">END Time</string>
    <string name="end_time">End?</string>
    <string name="main_view_label">meetup.</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_google_task">GoogleTaskActivity</string>
    <string name="over_DB">Override DB</string>
    <string name="toggle">TOGGLE</string>

</resources>