<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditEventActivity" >

    <EditText
        android:id="@+id/editEventTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/event_title_hint"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editEventAddrText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editEventTitleText"
        android:ems="10"
        android:hint="@string/event_addr_hint"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/doneEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/done_edit_event" />

    <Button
        android:id="@+id/cancelEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/doneEditButton"
        android:text="@string/cancel_sched_event" />

    <EditText
        android:id="@+id/editNoteText"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editEventAddrText"
        android:ems="10"
        android:hint="@string/event_notes_hint"
        android:inputType="textMultiLine" />

    <!-- android:layout_height="wrap_content" -->

    <LinearLayout
        android:id="@+id/editLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editDateButton"
        android:layout_alignLeft="@+id/editNoteText"
        android:layout_alignRight="@+id/editNoteText"
        android:layout_below="@+id/editNoteText" >

        <TextView
            android:id="@+id/editDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/date_of_event" />

        <TextView
            android:id="@+id/editStartTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_time" />

        <TextView
            android:id="@+id/editEndTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_time" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editContactsText"
        android:layout_alignRight="@+id/editContactsText"
        android:layout_below="@+id/editLinearLayout" >

        <Button
            android:id="@+id/editDateButton"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/select_date" />

        <Button
            android:id="@+id/editStartTimeButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/start_time_butt" />

        <Button
            android:id="@+id/editEndTimeButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/end_time_butt" />
    </LinearLayout>

    <Button
        android:id="@+id/editContactsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/doneEditButton"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/doneEditButton"
        android:text="@string/select_contacts" />

    <EditText
        android:id="@+id/editContactsText"
        android:layout_width="wrap_content"
        android:layout_height="108dp"
        android:layout_above="@+id/editContactsButton"
        android:layout_alignLeft="@+id/editContactsButton"
        android:layout_alignRight="@+id/editContactsButton"
        android:ems="10"
        android:hint="@string/contacts_list"
        android:inputType="textMultiLine" />

</RelativeLayout>