<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventViewActivity" 
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/homeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/home_button" />
        
        <Button
            android:id="@+id/calViewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/view_calendar" />

    </LinearLayout>
    
    <ListView
        android:id="@+id/eventsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>
    
    <!--<TextView
        android:id="@+id/emptyListText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_events" />
    -->
    
    <TextView 
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_events" />

</LinearLayout>